<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/project_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/cell_phone_icon"
            android:title="@string/menu_informacion" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/setting_icon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_acerca_de"
            android:icon="@drawable/info_circle_icon"
            android:title="@string/menu_acerca_de" />
        <item
            android:id="@+id/salir"
            android:icon="@drawable/exit_icon"
            android:title="@string/menu_salir"/>
    </group>


</menu>