<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.esime.nfcdroid2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.esime.nfcdroid2.ui.historial.HistorialFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.esime.nfcdroid2.ui.configuration.ConfigFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/nav_informacion"
        android:name="com.esime.nfcdroid2.ui.informacion.InfoFragment"
        android:label="@string/menu_informacion"
        tools:layout="@layout/fragment_informacion" />

    <fragment
        android:id="@+id/nav_acerca_de"
        android:name="com.esime.nfcdroid2.ui.acercade.AcercaFragment"
        android:label="@string/menu_acerca_de"
        tools:layout="@layout/fragment_acercade" />
</navigation>